update schema
