# src/main/kotlin/com/wutsi/platform/chat/dto/Message.kt
@@ -7,6 +7,7 @@ import kotlin.String
 
 public data class Message(
     public val id: Long = 0,
+    public val referenceId: String = "",
     public val conversationId: String = "",
     public val senderId: Long = 0,
     public val recipientId: Long = 0,
